--- a/index.html
+++ b/index.html
@@ -34,5 +34,6 @@
       </div>
     </main>
     <script src="https://raw.githack.com/Arza-3d/ar3.js/master/ar3.min.js"></script>
+    <script src="blackjack/blackjack.js"></script>
   </body>
 </html>
