basic play added

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <h2>title h2</h2>
         <h3>blackjack</h3>
         <section>
+          <button onclick="playBlackJack();">play more blackJack</button>
           <p>.....</p>
         </section>
       </div>
